Use interruptible FileChannel to read